dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  labels: 
    app: myapp-argo-application
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 2
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: wil42/playground:v1
        ports:
        - containerPort: 8888
