dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  label:
    app: myapp-argo-application
spec:
  selector:
    app: myapp
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
